MAIN: fixing squashed splash area, lost search button

--- a/components/frontpage/LatestPost.module.scss
+++ b/components/frontpage/LatestPost.module.scss
@@ -13,6 +13,7 @@
     --header-height: calc(60px + 2vw);
     display: flex;
     flex-direction: row-reverse;
+    min-height: 60vh; // fill the "splash" area. need a better way to do this... but time is short today.
 
     /* background image set in jsx */
     background-size: cover;
